# Qt-testing-cpp

./: CMakeLists.txt  CustomWidget.cpp  CustomWidget.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
